--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 fastapi = "^0.55.1"
 uvicorn = "^0.11.5"
+sqlalchemy = "^1.3.17"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.4.2"
